Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

* convert FETCHCOMMAND/RESUMECOMMAND support to execute spawn_bash by
  default instead of trying to cut out shell; this kills off the occasional
  incompatibility introduced via portage supplying make.globals.

* FEATURES=sfperms is now a trigger instead of a dyn_preinst hook.
  Faster, cleaner, etc.

* FEATURES=multilib-strict was converted into a trigger.  Tries to
  use the python bindings for file first (merge file[python]), falling
  back to invoking file.  Strongly suggested you have the bindings- fair bit
  faster.  Finally, verification now runs for binpkgs also.

* bug 137; symlink on directory merging failures where pkgcore would wipe
  files it had just installed invalidly.

* correct issue in offset rewriting (was resetting new_offset to '/')-
  should only be api visible, no existing consumers known.

* ebuild env lzma unpack support was broken; fixed (ticket 140).

* Additional debug output for pmerge.

* Further extending PortageFormatter to sanely handle worldfile highlights
  and show repos with both id and location

* Ticket 132: Portage Formatter supports real portage colors now,
  thanks to agaffney for getting the ball rolling

* Masked IUSEs were not treated right in all cases, thanks to agaffney
  for report and help testing

* (0.3.3 Add: diefunc tracebacks beautified)


pkgcore 0.3.4:

* IUSEs were filtered, unstated were not respected though breaks with
  current portage tree, so re-enabling.
  Also sanely handle -flag enforcing now and kill hackish code for it.


pkgcore 0.3.3:

* IUSE defaults are respected now, so EAPI=1 implemented

* Write slotted atoms to worldfile as portage supports this now

* Sync up with portage; add support for lzma to unpack- mirror r7991 from
  portage.


pkgcore 0.3.2:

* ticket 190746 from gentoo; basically need to force the perms of first level